# Vento

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: container.py  main.py
app/application/commands/auth/: login.py  logout.py  refresh_token.py  register.py
app/application/commands/chats/: add_member.py  change_member_role.py  create_channel.py  create_group.py  delete_chat.py  join_chat.py  leave_chat.py  mute_chat.py  open_private_chat.py  remove_member.py  update_channel.py  update_group.py
app/application/queries/chats/: get_chat.py  get_chat_members.py  get_user_chats.py
app/core/: config.py  dependencies.py  security.py
app/domain/: exceptions.py
app/domain/entities/: chat.py  enums.py  session.py  user.py
app/domain/ports/repositories/: chat_member_repo.py  chat_repo.py  credentials_repo.py  user_repo.py
app/infrastructure/db/: session.py
app/infrastructure/db/models/: base.py  chat.py  user.py
app/infrastructure/db/repositories/: chat_member_repo.py  chat_repo.py  credentials_repo.py  user_repo.py
app/presentation/schemas/: auth.py  chat.py  user.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/api/: test_auth.py  test_chat.py
tests/integration/repositories/: test_chat_member_repo.py  test_chat_repo.py  test_credentials_repo.py  test_user_repo.py
tests/unit/: fake_repos.py
tests/unit/commands/auth/: test_login.py  test_refresh_token.py  test_register.py
tests/unit/commands/chats/: test_add_member.py  test_change_member_role.py  test_create_channel.py  (+9 more)
(+6 files in other folders)
